--- a/templates/index.html
+++ b/templates/index.html
@@ -8,13 +8,18 @@
     <meta name="author" content="" />
     <title>FIFA22 Predicter</title>
     <!-- Favicon-->
-    <link rel="icon" type="image/x-icon" href="../assets/favicon.ico" />
+    <link rel="icon" type="image/png" href="../assets/favicon-16x16.png" />
     <!-- Core theme CSS (includes Bootstrap)-->
     <link rel="stylesheet" type="text/css" href="../static/css/styles.css">
     <!-- d3-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.7.0/d3.min.js"
         integrity="sha512-L5K9Bf852XyB+wrvRFGwWzfhVI+TZqJlgwzX9yvrfhILuzIZfrcQO4au9D9eVDnkQ6oqYr9v2QwJdFo+eKE50Q=="
         crossorigin="anonymous"></script>
+
+       
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 </head>
 
 <body>
@@ -239,15 +244,10 @@
                         improve your skill!</p>
                     <title>Bootstrap Example</title>
                     <meta charset="utf-8">
-                    <meta name="viewport" content="width=device-width, initial-scale=1">
-                    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-                    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-                    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+                    
                     </head>
 
-                    <body>
-
-                        <div class="container">
+                             <div class="container">
                             <div class="row justify-content-center"></div>
 
                             <div id="myCarousel" class="carousel slide" data-ride="carousel">
@@ -313,23 +313,22 @@
                         </div>
                         <p> *Disclaimer: Model does not change related attributes when individual attributes are changed
                         </p>
-                    </body>
+                    
 
-</html>
 
-</section>
-<!-- Footer-->
-<footer class="py-5 bg-dark">
-    <div class="container">
-        <p class="m-0 text-center text-white">Copyright &copy; Aarvin, Lydia, Emily, Julie, & Breckin Inc.</p>
-    </div>
-</footer>
-<!-- Bootstrap core JS-->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-<!-- Core theme JS-->
-<script src="../static/js/scripts.js"></script>
-<!-- Players JS-->
-<script src="../static/js/app.js"></script>
-</body>
+    </section>
+    <!-- Footer-->
+    <footer class="py-5 bg-dark">
+        <div class="container">
+            <p class="m-0 text-center text-white">Copyright &copy; Aarvin, Lydia, Emily, Julie, & Breckin Inc.</p>
+        </div>
+    </footer>
+    <!-- Bootstrap core JS-->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- Core theme JS-->
+    <script src="../static/js/scripts.js"></script>
+    <!-- Players JS-->
+    <script src="../static/js/app.js"></script>
+    </body>
 
 </html>
