--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
     <meta name="author" content="" />
     <title>FIFA22 Predicter</title>
     <!-- Favicon-->
-    <link rel="icon" type="image/png" href="https://img.icons8.com/external-konkapp-flat-konkapp/64/000000/external-soccer-soccer-konkapp-flat-konkapp.png"/>></a>/>
+    <link rel="icon" type="image/png" href="https://img.icons8.com/external-konkapp-flat-konkapp/64/000000/external-soccer-soccer-konkapp-flat-konkapp.png"/>
     <!-- Core theme CSS (includes Bootstrap)-->
     <link rel="stylesheet" type="text/css" href="../static/css/styles.css">
     <!-- d3-->
